# deciphon-scanny

./: .pre-commit-config.yaml  README.md  pyproject.toml  run.py
deciphon_scanny/: cli.py  scanny-mac  scanny.py  scanny_file.py
